# ec-slimloader

./: AGENTS.md  deny.toml
.github/: copilot-instructions.md
bootloader-tool/: Cargo.toml
examples/rt685s/: Cargo.toml
examples/rt685s/application/src/: main.rs
libs/: Cargo.toml
libs/ec-slimloader-imxrt/: Cargo.toml
libs/ec-slimloader-imxrt/src/: verification.rs
libs/ec-slimloader/src/: lib.rs
libs/imxrt-rom/: Cargo.toml
