[package]
name = "bootloader-tool"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

object = { version = "0.38", features = ["build"] }
probe-rs = { version = "0.31.0", default-features = false, features = ["builtin-targets"] }

tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }

anyhow = "1.0"
itertools = "0.14.0"

rand = "0.9"

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9", features = ["serde"] }
serde_json = "1.0"

pretty_env_logger = "0.5"
log = "0.4"

hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
rsa = { version = "0.9.10", features = ["sha2"] }
x509-parser = { version = "0.18.0", features = ["verify"] }

tempfile = "3.20.0"
