[workspace]
resolver = "3"
members = [
    "ec-slimloader",
    "ec-slimloader-imxrt",
    "ec-slimloader-state",
    "imxrt-rom",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/ec-slimloader"

[workspace.lints.clippy]
manual_let_else = "deny"

[workspace.dependencies]
defmt = "0.3.7"
defmt-or-log = { version = "0.2.2", default-features = false }
embedded-storage-async = "0.4.1"
embassy-sync = "0.8.0"
log = "0.4"

cortex-m = { version = "0.7.7" }
