[workspace]
resolver = "3"
members = [
    "application",
    "bootloader",
    "bsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/ec-slimloader"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt.git", tag = "v0.1.0", default-features = false }

partition-manager = { git = "https://github.com/OpenDevicePartnership/embedded-services.git", tag = "v0.1.0", default-features = false }
embassy-sync = "0.8.0"
embassy-executor = "0.9.1"

defmt = "1.0.1"
defmt-or-log = { version = "0.2.2", default-features = false }
defmt-rtt = "0.4.0"

[profile.release]
lto = true      # better optimizations
debug = 2
opt-level = "s"
