[package]
name = "ec-slimloader-imxrt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Skips all security and verification checks
non-secure = []

# Special board support
mimxrt685s-evk = ["imxrt-fcb-rt685evk", "mimxrt685s"]

# Optional empty OTFAD definition
empty-otfad = []

# FCB support
fcb = []

# FCB modes
imxrt-fcb-1spi-nor = ["fcb"]
imxrt-fcb-rt685evk = ["fcb"]

# FCB banks
imxrt-fcb-1spi-a1-nor = ["imxrt-fcb-1spi-nor"]
imxrt-fcb-1spi-b1-nor = ["imxrt-fcb-1spi-nor"]

# Chip variants
mimxrt685s = ["imxrt", "embassy-imxrt/mimxrt685s"]
mimxrt633s = ["imxrt", "embassy-imxrt/mimxrt633s"]

# Common imxrt features
imxrt = ["dep:mimxrt600-fcb"]

# Optional debug logging 
defmt = [
    "dep:defmt",
    "defmt-or-log/defmt",
    "ec-slimloader/defmt",
    "ec-slimloader-state/defmt",
    "imxrt-rom/defmt",
    "embassy-imxrt/defmt",
    "partition-manager/defmt",
]
log = [
    "dep:log",
    "defmt-or-log/log",
    "imxrt-rom/log",
    "ec-slimloader-state/log",
]

default = []

[dependencies]
ec-slimloader = { path = "../ec-slimloader" }
ec-slimloader-state = { path = "../ec-slimloader-state", default-features = false }
imxrt-rom = { path = "../imxrt-rom", features = ["rt"] }

cortex-m = { workspace = true }
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt.git", tag = "v0.1.0", default-features = false, features = [
    "unstable-pac",
] }

mimxrt600-fcb = { version = "0.2.2", optional = true }

defmt = { workspace = true, optional = true }
defmt-or-log = { workspace = true }
log = { workspace = true, optional = true }

embassy-embedded-hal = "0.5.0"

embassy-sync = { workspace = true }
partition-manager = { git = "https://github.com/OpenDevicePartnership/embedded-services.git", tag = "v0.1.0", features = [
    "esa",
    "macros",
], default-features = false }
embedded-storage = "0.3.1"
embedded-storage-async = { workspace = true }

static_cell = "2.1.1"
heapless = "0.8.0"
