[package]
name = "imxrt-rom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
rt = []

log = ["dep:log", "defmt-or-log/log"]
defmt = ["dep:defmt", "defmt-or-log/defmt", "device-driver/defmt-03"]

mimxrt685s = ["embassy-imxrt/mimxrt685s"]
mimxrt633s = ["embassy-imxrt/mimxrt633s"]

[dependencies]
defmt = { workspace = true, optional = true }
defmt-or-log = { workspace = true }
log = { workspace = true, optional = true }

cortex-m = { workspace = true }
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt.git", tag = "v0.1.0", default-features = false, features = [
    "unstable-pac",
] }

device-driver = { version = "1.0.9", default-features = false, features = [
    "json",
] }

[lints]
workspace = true
